--- a/.ci/Dockerfile.winx86
+++ b/.ci/Dockerfile.winx86
@@ -8,7 +8,7 @@ RUN choco install -y visualstudio2019community vcredist2017 --ignoredetectedrebo
 #RUN choco install -y aria2 --version 1.32.0.1
 #vcredist2017
 
-WORKDIR C:\Program Files\CMake\bin\
+WORKDIR C:\Program Files\CMake\bin
 RUN .\cmake -E make_directory C:/lib
 RUN .\cmake -E make_directory C:/include
 
