--- a/.ci/Dockerfile.linux
+++ b/.ci/Dockerfile.linux
@@ -10,7 +10,7 @@ RUN cp -r cmake-3.15.2-Linux-x86_64/* /
 WORKDIR ~
 RUN git clone https://github.com/Microsoft/vcpkg.git
 WORKDIR vcpkg
-RUN ./bootstrap-vcpkg.bat
+RUN ./bootstrap-vcpkg.sh
 RUN chmod +x vcpkg
 RUN vcpkg install boost-filesystem boost-program-options spdlog
 
