build vcpkg on build run in windows

--- a/.ci/Dockerfile.linux
+++ b/.ci/Dockerfile.linux
@@ -1,6 +1,7 @@
 FROM gcc:latest
 
 RUN apt-get update -qq
+RUN apt-get upgrade build-essential -qq
 RUN apt-get install libncurses5-dev libsndfile1-dev libasound2 libasound2-dev libflac-dev libvorbis-dev libogg-dev git build-essential python libtool libtool-bin wget libmp3lame-dev librtaudio-dev zip -qq -y
 
 RUN wget https://github.com/Kitware/CMake/releases/download/v3.15.2/cmake-3.15.2-Linux-x86_64.tar.gz
