--- a/.ci/Dockerfile.winx64
+++ b/.ci/Dockerfile.winx64
@@ -9,10 +9,4 @@ RUN choco install -y visualstudio2019community vcredist2017 --ignoredetectedrebo
 WORKDIR C:/Program\ Files/CMake/bin
 RUN .\cmake -E make_directory C:/lib
 RUN .\cmake -E make_directory C:/include
-
-WORKDIR C:/
-RUN git clone https://github.com/Microsoft/vcpkg.git
-WORKDIR vcpkg
-RUN .\bootstrap-vcpkg.bat
-RUN .\vcpkg integrate install
-RUN .\vcpkg install libsndfile:x64-windows libflac:x64-windows libvorbis:x64-windows libogg:x64-windows spdlog:x64-windows boost-filesystem:x64-windows boost-program-options:x64-windows pdcurses:x64-windows mp3lame:x64-windows
+RUN .\cmake -E make_directory C:/vcpkg
