--- a/.ci/Dockerfile.winx86
+++ b/.ci/Dockerfile.winx86
@@ -11,13 +11,14 @@ RUN choco install -y visualstudio2019community vcredist2017 --ignoredetectedrebo
 WORKDIR C:/Program\ Files/CMake/bin
 RUN .\cmake -E make_directory C:/lib
 RUN .\cmake -E make_directory C:/include
+RUN .\cmake -E make_directory C:/vcpkg
 
-WORKDIR C:/
-RUN git clone https://github.com/Microsoft/vcpkg.git
-WORKDIR vcpkg
-RUN .\bootstrap-vcpkg.bat
-RUN .\vcpkg integrate install
-RUN .\vcpkg install libsndfile:x86-windows libflac:x86-windows libvorbis:x86-windows libogg:x86-windows spdlog:x86-windows boost-filesystem:x86-windows boost-program-options:x86-windows pdcurses:x86-windows mp3lame:x86-windows
+# WORKDIR C:/
+# RUN git clone https://github.com/Microsoft/vcpkg.git
+# WORKDIR vcpkg
+# RUN .\bootstrap-vcpkg.bat
+# RUN .\vcpkg integrate install
+# RUN .\vcpkg install libsndfile:x86-windows libflac:x86-windows libvorbis:x86-windows libogg:x86-windows spdlog:x86-windows boost-filesystem:x86-windows boost-program-options:x86-windows pdcurses:x86-windows mp3lame:x86-windows
 
 # WORKDIR C:/
 # ADD https://netix.dl.sourceforge.net/project/lame/lame/3.100/lame-3.100.tar.gz C:/
