--- a/.ci/Dockerfile.linux
+++ b/.ci/Dockerfile.linux
@@ -13,7 +13,7 @@ RUN git clone https://github.com/Microsoft/vcpkg.git
 WORKDIR vcpkg
 RUN ./bootstrap-vcpkg.sh
 RUN chmod +x vcpkg
-RUN vcpkg install boost-filesystem boost-program-options spdlog
+RUN ./vcpkg install boost-filesystem boost-program-options spdlog
 
 # RUN wget https://dl.bintray.com/boostorg/release/1.71.0/source/boost_1_71_0.tar.gz
 # RUN tar xf boost_1_71_0.tar.gz
