--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -73,6 +73,7 @@ win_build_task:
   #   - nmake -f Makefile.MSVC%BITNESS% comp=msvc asm=no clean /D
 
   vcpkg_script:
+    - choco install visualstudio2019-workload-nativedesktop
     - git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
     - cd C:\vcpkg
     - .\bootstrap-vcpkg.bat
