--- a/.ci/Dockerfile.winx64
+++ b/.ci/Dockerfile.winx64
@@ -4,9 +4,7 @@ RUN choco upgrade all -y
 #RUN choco upgrade -y visualstudio2017community visualstudio2017-workload-vctools
 RUN choco install -y cmake --ignoredetectedreboot
 RUN choco install -y visualstudio2019community vcredist2017 --ignoredetectedreboot
-RUN choco install visualstudio2019-workload-nativedesktop --ignoredetectedreboot -y --package-parameters "--no-includeRecommended"
-RUN choco install windows-sdk-10.1 llvm -y
-RUN choco install visualstudio2019-workload-vctools -y
+RUN choco install visualstudio2019-workload-nativedesktop visualstudio2019-workload-vctools --ignoredetectedreboot -y --package-parameters "--no-includeRecommended"
 #RUN choco install -y aria2 --version 1.32.0.1 --ignoredetectedreboot -d
 
 WORKDIR C:/Program\ Files/CMake/bin
