--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -78,6 +78,7 @@ win_build_task:
   vcpkg_script:
     #-  # ; cat C:\ProgramData\chocolatey\logs\chocolatey.log
     - echo $VSPATH
+    - ls $VSPATH
     - git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
     - cd C:\vcpkg
     - .\bootstrap-vcpkg.bat -withVSPath $VSPATH
