--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -77,6 +77,7 @@ win_build_task:
 
   vcpkg_script:
     #-  # ; cat C:\ProgramData\chocolatey\logs\chocolatey.log
+    - dir "%VSPATH%"
     - git clone https://github.com/Microsoft/vcpkg.git C:\vcpkg
     - cd C:\vcpkg
     - .\bootstrap-vcpkg.bat -withVSPath '"%VSPATH%"'
