--- a/.ci/Dockerfile.winx86
+++ b/.ci/Dockerfile.winx86
@@ -5,7 +5,7 @@ RUN choco upgrade all -y
 #RUN choco install -y visualstudio2019-workload-nativedesktop aria2 7zip vcredist2017
 RUN choco install -y cmake --ignoredetectedreboot
 RUN choco install -y visualstudio2019community vcredist2017 --ignoredetectedreboot
-RUN choco install visualstudio2019-workload-nativedesktop visualstudio2019-workload-vctools --ignoredetectedreboot -y --package-parameters "--no-includeRecommended --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64"
+RUN choco install visualstudio2019-workload-nativedesktop visualstudio2019-workload-vctools --ignoredetectedreboot -y --package-parameters "--no-includeRecommended --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.VC.140"
 #RUN choco install windows-sdk-10.1 llvm -y
 #RUN choco install -y aria2 --version 1.32.0.1
 #vcredist2017
