--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -9,7 +9,7 @@ linux_build_task:
   build_script:
     - mkdir -p __build
     - cd __build
-    - cmake .. -DCMAKE_TOOLCHAIN_FILE=/usr/local/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX ./chronicle-install
+    - cmake .. -DCMAKE_TOOLCHAIN_FILE=/usr/local/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_INSTALL_PREFIX=chronicle-install
     - cmake --build .
 
   dist_script:
