--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,7 +190,7 @@ if(UNIX AND NOT WIN32)
     set(CPACK_DEBIAN_PACKAGE_VERSION "1.1.0")
     set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
 
-    if(${CIRRUS_BRANCH} STREQUAL "master")
+    if($ENV:{CIRRUS_BRANCH} STREQUAL "master")
         set(CPACK_SOURCE_PACKAGE_FILE_NAME "source/chronicle-${CPACK_DEBIAN_PACKAGE_VERSION}")
     else()
         string(TIMESTAMP DATETIME "%Y%m%d%H%M%S")
