use correct packaging dir on linux

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -19,8 +19,8 @@ linux_build_task:
     - cmake --install .
     - cpack .
     - cd chronicle-install
-    - tar czf ../chronicle-linux-${CIRRUS_BUILD_ID}.tar.gz ./*
-    - zip -rq9 ../chronicle-linux-${CIRRUS_BUILD_ID} ./* -x *.gz -x *.tar
+    - tar czf ./chronicle-linux-${CIRRUS_BUILD_ID}.tar.gz ./*
+    - zip -rq9 ./chronicle-linux-${CIRRUS_BUILD_ID} ./* -x *.gz -x *.tar
 
   package_artifacts:
     path: __build/chronicle-install/chronicle-linux*
