quiet choco down

--- a/.ci/Dockerfile.winx64
+++ b/.ci/Dockerfile.winx64
@@ -2,9 +2,9 @@ FROM cirrusci/windowsservercore:2019
 
 #RUN choco upgrade all -y
 #RUN choco upgrade -y visualstudio2017community visualstudio2017-workload-vctools
-RUN choco install -y cmake vcredist2017 windows-sdk-10.1 --ignoredetectedreboot --ignorepackagecodes
+RUN choco install -y cmake vcredist2017 windows-sdk-10.1 --ignoredetectedreboot --ignorepackagecodes --no-progress
 #RUN choco install -y visualstudio2019community --ignoredetectedreboot --ignorepackagecodes --package-parameters "--add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.VC.140"
-RUN choco install -y visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.Windows10SDK.18362 --add Microsoft.Component.VC.Runtime.UCRTSDK --no-includeRecommended" --ignorepackagecodes
+RUN choco install -y visualstudio2019buildtools --no-progress --ignorepackagecodes --ignoredetectedreboot --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.Windows10SDK.18362 --add Microsoft.Component.VC.Runtime.UCRTSDK --no-includeRecommended" 
 #RUN choco install visualstudio2019-workload-nativedesktop visualstudio2019-workload-vctools --ignoredetectedreboot --ignorepackagecodes -y --package-parameters "--no-includeRecommended"
 #RUN choco install -y aria2 --version 1.32.0.1 --ignoredetectedreboot -d
 
