--- a/.ci/Dockerfile.winx86
+++ b/.ci/Dockerfile.winx86
@@ -4,7 +4,7 @@ RUN choco upgrade all -y
 #RUN choco upgrade -y visualstudio2017community visualstudio2017-workload-vctools
 #RUN choco install -y visualstudio2019-workload-nativedesktop aria2 7zip vcredist2017
 RUN choco install -y cmake vcredist2017 windows-sdk-10.1 --ignoredetectedreboot --ignorepackagecodes --no-progress
-RUN choco install -y visualstudio2019buildtools --no-progress --ignorepackagecodes --ignoredetectedreboot --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.Windows10SDK.18362 --add Microsoft.Component.VC.Runtime.UCRTSDK --no-includeRecommended" 
+RUN choco install -y visualstudio2019buildtools --no-progress --ignorepackagecodes --ignoredetectedreboot --timeout 900 -v --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.Windows10SDK.18362 --add Microsoft.Component.VC.Runtime.UCRTSDK --no-includeRecommended" 
 # RUN choco install -y visualstudio2019community --ignoredetectedreboot --ignorepackagecodes --package-parameters "--add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.VC.140"
 # RUN choco install visualstudio2019-workload-nativedesktop visualstudio2019-workload-vctools --ignoredetectedreboot --ignorepackagecodes -y --package-parameters "--no-includeRecommended"
 #RUN choco install windows-sdk-10.1 llvm -y
