build linux source debs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,18 +190,18 @@ if(UNIX AND NOT WIN32)
     set(CPACK_DEBIAN_PACKAGE_VERSION "1.1.0")
     set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
 
+    set(CPACK_SOURCE_GENERATOR "TGZ;ZIP")
     if($ENV:{CIRRUS_BRANCH} STREQUAL "master")
-        set(CPACK_SOURCE_PACKAGE_FILE_NAME "source/chronicle-${CPACK_DEBIAN_PACKAGE_VERSION}")
+        set(CPACK_SOURCE_PACKAGE_FILE_NAME "chronicle-${CPACK_DEBIAN_PACKAGE_VERSION}")
     else()
         string(TIMESTAMP DATETIME "%Y%m%d%H%M%S")
-        set(CPACK_SOURCE_PACKAGE_FILE_NAME "source/chronicle-${CPACK_DEBIAN_PACKAGE_VERSION}+SNAPSHOT${DATETIME}")
-    endif()
+        set(CPACK_SOURCE_PACKAGE_FILE_NAME "chronicle-${CPACK_DEBIAN_PACKAGE_VERSION}+SNAPSHOT${DATETIME}")
+    endif() 
     set(CPACK_SOURCE_OUTPUT_CONFIG_FILE "CPackSourceConfig.cmake")
-    set(CPACK_SOURCE_IGNORE_FILES ".ci;.git*;.vscode;*.*cirrus.*;*build*")
+    set(CPACK_SOURCE_IGNORE_FILES "\.ci;.git.*;\.vscode;.*cirrus.*;.*build.*")
 
 else()
     set(CPACK_GENERATOR "ZIP;TGZ")
-    set(CPACK_SOURCE_GENERATOR "TGZ;TZ")
 endif()
 
 set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE 1)
