--- a/.ci/Dockerfile.linux
+++ b/.ci/Dockerfile.linux
@@ -2,7 +2,7 @@ FROM gcc:latest
 
 RUN apt-get update -qq
 RUN apt-get upgrade build-essential -qq
-RUN apt-get install libncurses5-dev libsndfile1-dev libasound2 libasound2-dev libflac-dev libvorbis-dev libogg-dev git python libtool libtool-bin wget libmp3lame-dev librtaudio-dev zip -qq -y
+RUN apt-get install libncurses5-dev libsndfile1-dev libasound2 libasound2-dev libflac-dev libvorbis-dev libogg-dev git python libtool libtool-bin wget libmp3lame-dev zip -qq -y
 
 RUN wget https://github.com/Kitware/CMake/releases/download/v3.15.2/cmake-3.15.2-Linux-x86_64.tar.gz
 RUN tar xf cmake-3.15.2-Linux-x86_64.tar.gz
@@ -13,7 +13,7 @@ RUN git clone https://github.com/Microsoft/vcpkg.git /usr/local/vcpkg
 WORKDIR /usr/local/vcpkg
 RUN ./bootstrap-vcpkg.sh
 RUN chmod +x vcpkg
-RUN ./vcpkg install boost-filesystem boost-program-options spdlog
+RUN ./vcpkg install boost-filesystem boost-program-options spdlog rtaudio
 
 # RUN wget https://dl.bintray.com/boostorg/release/1.71.0/source/boost_1_71_0.tar.gz
 # RUN tar xf boost_1_71_0.tar.gz
