feat(core): Move towards conan build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-include_directories("$PROJECT_SOURCE_DIR")
+include_directories(${PROJECT_SOURCE_DIR})
 
 add_executable(chronicle 
 parse_opts.cpp
@@ -18,13 +18,6 @@ screen.cpp
 chronicle.cpp
 )
 
-IF (UNIX AND NOT WIN32)
-    include_directories(/usr/include/rtaudio)
-endif()
-
-if (WIN32)
-    include_directories("C:/include")
-endif()
 
 ##########
 # SPDLOG #
@@ -33,8 +26,6 @@ endif()
 #add_compile_options(-DSPDLOG_COMPILED_LIB -D_WIN32_WINNT=0x600 -D_ISOC99_SOURCE -lole32 -lwinmm -ldsound -Wl,--trace,--as-needed)
 find_package(spdlog CONFIG REQUIRED)
 target_link_libraries(chronicle PRIVATE spdlog::spdlog)
-
-#find_package(fmt CONFIG REQUIRED)
 
 ##############
 # LIBMP3LAME #
@@ -47,12 +38,9 @@ if(UNIX)
     else()
         message(FATAL_ERROR "Could not find lame! Exiting...")
     endif()
-
-endif()
-
-if(WIN32)
-    find_package(mp3lame CONFIG REQUIRED)
-    target_link_libraries(chronicle PRIVATE mp3lame::mp3lame)
+elseif(WIN32)
+    find_package(libmp3lame CONFIG REQUIRED)
+    target_link_libraries(chronicle PRIVATE libmp3lame::libmp3lame)
 endif()
 
 ##############
@@ -67,8 +55,7 @@ if (UNIX)
     else()
         message(FATAL_ERROR "Could not find libsndfile! Exiting...")
     endif()
-endif()
-if (WIN32)
+elseif (WIN32)
     find_package(SndFile CONFIG REQUIRED)
     target_link_libraries(chronicle PRIVATE SndFile::sndfile)
 endif()
@@ -79,69 +66,37 @@ endif()
 
 if (UNIX)
     find_library(CURSES_LIB ncurses)
+    if (CURSES_LIB)
+        message(STATUS "Found curses: ${CURSES_LIB}")
+        target_link_libraries(chronicle PRIVATE ${CURSES_LIB})
+    else()
+        message(FATAL_ERROR "Could not find curses! Exiting...")
+    endif()
+elseif (WIN32)
+    find_package(pdcurses CONFIG REQUIRED)
+    target_link_libraries(chronicle PRIVATE pdcurses::pdcurses)
 endif()
 
-if (WIN32)
-#    if(PORT STREQUAL "pdcurses")
-#        set(VCPKG_LIBRARY_LINKAGE static)
-#    elseif()
-#        set(VCPKG_LIBRARY_LINKAGE dynamic)
-#    endif()
-    find_library(CURSES_LIB NAMES pdcurses.dll pdcurses.lib)
-endif()
-
-if (CURSES_LIB)
-    message(STATUS "Found curses: ${CURSES_LIB}")
-    target_link_libraries(chronicle PRIVATE ${CURSES_LIB})
-else()
-    message(FATAL_ERROR "Could not find curses! Exiting...")
-endif()
 
 ###########
 # RTAUDIO #
 ###########
-
-find_package(RtAudio CONFIG REQUIRED)
-
-#find_library(RTAUDIO_LIB NAMES rtaudio
-#HINTS "C:/lib/")
-if (RtAudio_DIR OR rtaudio_FOUND)
-    message(STATUS "Found RtAudio: ${RtAudio_DIR}")
-    target_link_libraries(chronicle PRIVATE RtAudio::rtaudio)
-
-else()
-    message(FATAL_ERROR "Could not find RtAudio! Exiting...")
+#target_link_libraries(chronicle PRIVATE rtaudio)
+if(WIN32)
+    add_definitions(-DAUDIO_WINDOWS_WASAPI=ON)
+    add_definitions(-DAUDIO_WINDOWS_ASIO=ON)
 endif()
+
+add_subdirectory(rtaudio)
+target_link_libraries(chronicle PRIVATE rtaudio)
+target_include_directories(chronicle PRIVATE ${RtAudio_SOURCE_DIR})
 
 #########
 # BOOST #
 #########
-
-# set(Boost_DEBUG ON)
 find_package(Boost REQUIRED filesystem program_options)
-if(Boost_FILESYSTEM_FOUND)
-    message(STATUS "Found Boost filesystem...")
-    if (Boost_FILESYSTEM_LIBRARY)
-        message(STATUS "  Found Boost filesystem libraries")
-    else()
-        message(FATAL_ERROR "  Could not found Boost filesystem library! Exiting...")
-    endif()
-else()
-    message(FATAL_ERROR "Could not find the Boost filesystem component! Exiting...")
-endif()
+target_link_libraries(chronicle PRIVATE Boost::program_options Boost::filesystem)
 
-if(Boost_PROGRAM_OPTIONS_FOUND)
-    message(STATUS "Found Boost program_options...")
-    if (Boost_PROGRAM_OPTIONS_LIBRARY)
-        message(STATUS "  Found Boost program_options libraries")
-    else()
-        message(FATAL_ERROR "  Could not find Boost program_options library! Exiting...")
-    endif()
-else()
-    message(FATAL_ERROR "Could not find the Boost program_options component! Exiting...")
-endif()
-
-target_link_libraries(chronicle PRIVATE ${Boost_LIBRARIES})
 
 ############################
 # INSTALLATION / PACKAGING #
@@ -187,7 +142,7 @@ set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENCE.md")
 if(UNIX AND NOT WIN32)
     set(CPACK_GENERATOR "DEB")
     set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Cal McLean <calmcl1@aol.com>") # required
-    set(CPACK_DEBIAN_PACKAGE_DEPENDS "librtaudio6 (>=5), libsndfile1, libboost-program-options1.71.0, libboost-filesystem1.71.0, libncurses6 (>=6.0), libmp3lame-dev (>= 1.3.0)")
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS "librtaudio6 (>=5.2), libsndfile1, libboost-program-options1.71.0, libboost-filesystem1.71.0, libncurses6 (>=6.0), libmp3lame-dev (>= 1.3.0)")
     set(CPACK_DEBIAN_PACKAGE_SECTION "Sound")
     set(CPACK_DEBIAN_PACKAGE_VERSION "1.1.0")
     set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
